Page MenuHome GnuPG

typo in agent/gpg-agent.c
Closed, ResolvedPublic

Description

gpg-agent's `--debug-wait' switch does not work as one would expect:

toomas [ ~ ]$ gpg-agent --debug-wait 5 --server
gpg-agent[32506]: invalid option "--debug-wait"
toomas [ ~ ]$ gpg-agent --\ \ debug-wait 5 --server
gpg-agent[32504]: DBG: waiting for debugger - my pid is 32504 .....
^C

Fix:

Details

Version
gnupg 2.1.21

Revisions and Commits