agent: Fix option --debug-wait

* agent/gpg-agent.c (opts): Typo fix.
--

Regression-due-to: ccee34736b57a42ec4bdcb0d3181bdc6a08b0fff
GnuPG-bug-id: 3225
Signed-off-by: Werner Koch <wk@gnupg.org>